correct running instructions